# synapse

./: .gitignore  README.md  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/synapse_backend/: config.py  courses.py  main.py  packs.py
backend/synapse_backend/brain/: backends.py  between_turns.py  classroom.py  embeddings.py  grader.py  planner.py  prompts.py  quiz.py  rag.py  schemas.py  teacher.py  writing.py
backend/synapse_backend/gateway/: api.py  classroom.py  protocol.py  ws.py
backend/synapse_backend/stores/: documents.py  metrics.py  mongo.py  vectors.py
backend/tests/: conftest.py  test_backends.py  test_between_turns.py  test_classroom.py  test_corpus.py  test_courses.py  test_eval.py  test_planner.py  test_rag.py  test_session_ws.py  test_srs.py
docs/: synapse-concept.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/public/worklets/: recorder.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/classroom/: page.tsx
frontend/src/app/course/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/spike/: page.tsx
frontend/src/components/classroom/: DebugHUD.tsx  (+11 more)
frontend/src/lib/: api.ts  classroomMock.ts  classroomSource.ts  lessonMeta.ts  personas.ts  protocol.ts  types.ts  useCourse.ts  useDismissable.ts  usePrefersReducedMotion.ts  useSpikeSession.ts  vad.ts  whisper.worker.ts
gateway-rs/: Cargo.toml  README.md
gateway-rs/src/: barge_in.rs  config.rs  main.rs  media.rs  protocol.rs  session.rs  vad.rs
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
(+7 files in other folders)
