[project]
name = "synapse-backend"
version = "0.1.0"
description = "Synapse teaching service — Phase 0: single FastAPI process with separable gateway/brain modules"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.50",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "beanie>=1.27",
    "questdb>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "mongomock-motor>=0.0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synapse_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
